[gd_scene load_steps=7 format=3 uid="uid://cdisbxckds82v"]

[ext_resource type="Script" uid="uid://clrkrk0wkn2xh" path="res://Scripts/game_controller.gd" id="1_2irst"]
[ext_resource type="PackedScene" uid="uid://c64go4ir7wuwi" path="res://Scenes/Map_Controller/map_controller.tscn" id="2_j5yw3"]
[ext_resource type="Resource" uid="uid://btpkadm7mskr" path="res://Resources/location_index.tres" id="2_kldst"]
[ext_resource type="PackedScene" path="res://Scenes/Location.tscn" id="4_kldst"]
[ext_resource type="PackedScene" path="res://UI/next_button.tscn" id="5_b2bpf"]
[ext_resource type="Script" uid="uid://4nqd7saq0eqv" path="res://Scripts/Audio_Controller/audio_controller.gd" id="6_7lihs"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2irst")
location_index = ExtResource("2_kldst")

[node name="MapController" parent="." instance=ExtResource("2_j5yw3")]
metadata/_edit_lock_ = true

[node name="Location" parent="." instance=ExtResource("4_kldst")]
metadata/_edit_lock_ = true

[node name="NextButton" parent="." instance=ExtResource("5_b2bpf")]
offset_left = 1568.0
offset_top = 804.0
offset_right = 1911.0
offset_bottom = 1078.0

[node name="SFXPlayer" type="AudioStreamPlayer2D" parent="."]
bus = &"SFX"
script = ExtResource("6_7lihs")
metadata/_edit_lock_ = true

[connection signal="location_traversal" from="MapController" to="." method="_on_map_controller_location_traversal"]
[connection signal="go_next" from="NextButton" to="." method="_leave_location"]
